Update code html, css date 19/08

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,6 +33,9 @@
 @import "pages/asian-template";
 @import "pages/tour-schedule";
 @import "pages/success-registration";
+@import "pages/review-go";
+@import "pages/whish-list";
+@import "pages/compare-review";
 
 // ----------------------------------------------------------------------
 // Responsive
