--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -60,6 +60,10 @@ $background_color_2: inherit;
     width: 100%;
     z-index: 9;
 }
+
+.logo_banner {
+    margin-top: 60px;
+}
 .container_main {
     width: 100%;
     min-width: 320px;
