--- a/src/styles/pages/_tour-schedule.scss
+++ b/src/styles/pages/_tour-schedule.scss
@@ -58,6 +58,7 @@ $font_size_2: 15px;
 .wrapper_schedule{
 	padding: 20px;
 	background: #efefef;
+	margin-top: 60px;
 	.card{
 		margin-bottom: 20px;
 		border-radius: 15px;
