--- a/src/views/pages/asian-template.html
+++ b/src/views/pages/asian-template.html
@@ -457,10 +457,9 @@
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInliner">
+                                                                    id="customControlInliner" checked>
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInliner">Remember my
-                                                                    preference
+                                                                    for="customControlInliner"><span class="label-text">하나투어</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -468,10 +467,9 @@
                                                             </div>
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInline2r">
+                                                                    id="customControlInline2r" checked>
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInline2r">Remember my
-                                                                    preference
+                                                                    for="customControlInline2r"><span class="label-text">모두투어</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -481,8 +479,47 @@
                                                                 <input type="checkbox" class="custom-control-input"
                                                                     id="customControlInline1r">
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInline1r">Remember my
-                                                                    preference
+                                                                    for="customControlInline1r"><span class="label-text">노랑풍선</span>
+                                                                    <span class="amount">
+                                                                        10개
+                                                                    </span>
+                                                                </label>
+                                                            </div>
+                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                                                                <input type="checkbox" class="custom-control-input"
+                                                                    id="customControlInline1r4" checked>
+                                                                <label class="custom-control-label text"
+                                                                    for="customControlInline1r4"><span class="label-text">참좋은여행</span>
+                                                                    <span class="amount">
+                                                                        10개
+                                                                    </span>
+                                                                </label>
+                                                            </div>
+                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                                                                <input type="checkbox" class="custom-control-input"
+                                                                    id="customControlInline1r3">
+                                                                <label class="custom-control-label text"
+                                                                    for="customControlInline1r3"><span class="label-text">레드캡</span>
+                                                                    <span class="amount">
+                                                                        10개
+                                                                    </span>
+                                                                </label>
+                                                            </div>
+                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                                                                <input type="checkbox" class="custom-control-input"
+                                                                    id="customControlInline1r2">
+                                                                <label class="custom-control-label text"
+                                                                    for="customControlInline1r2"><span class="label-text">온라인투어</span>
+                                                                    <span class="amount">
+                                                                        10개
+                                                                    </span>
+                                                                </label>
+                                                            </div>
+                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                                                                <input type="checkbox" class="custom-control-input"
+                                                                    id="customControlInline1r1">
+                                                                <label class="custom-control-label text"
+                                                                    for="customControlInline1r1"><span class="label-text">인터파크투어</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -520,8 +557,8 @@
                                                                 <input type="checkbox" class="custom-control-input"
                                                                     id="customControlInlinee">
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInlinee">Remember my
-                                                                    preference
+                                                                    for="customControlInlinee"><span class="label-text">인천/김포
+                                                                    </span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -529,21 +566,9 @@
                                                             </div>
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInline2e">
+                                                                    id="customControlInline2e" checked>
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInline2e">Remember my
-                                                                    preference
-                                                                    <span class="amount">
-                                                                        10개
-                                                                    </span>
-                                                                </label>
-                                                            </div>
-                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                                                                <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInline1e">
-                                                                <label class="custom-control-label text"
-                                                                    for="customControlInline1e">Remember my
-                                                                    preference
+                                                                    for="customControlInline2e"><span class="label-text">인천/김포</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -579,10 +604,10 @@
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInlinew">
+                                                                    id="customControlInlinew" checked>
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInlinew">Remember my
-                                                                    preference
+                                                                    for="customControlInlinew"><span class="label-text">인천/김포
+                                                                    </span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -592,19 +617,7 @@
                                                                 <input type="checkbox" class="custom-control-input"
                                                                     id="customControlInline2w">
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInline2w">Remember my
-                                                                    preference
-                                                                    <span class="amount">
-                                                                        10개
-                                                                    </span>
-                                                                </label>
-                                                            </div>
-                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                                                                <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInline1w">
-                                                                <label class="custom-control-label text"
-                                                                    for="customControlInline1w">Remember my
-                                                                    preference
+                                                                    for="customControlInline2w"><span class="label-text">인천/김포</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
