--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,6 +33,7 @@
 @import "pages/asian-template";
 @import "pages/tour-schedule";
 @import "pages/success-registration";
+@import "pages/faq";
 
 // ----------------------------------------------------------------------
 // Responsive
