--- a/src/views/pages/index.html
+++ b/src/views/pages/index.html
@@ -50,6 +50,7 @@
                     </div>
                 </div>
                 @@include('../layouts/header.html')
+                @@include('../partials/banner.html')
                 <section class="container-fluid">
                     <div class="form-search">
                         <div class="row">
