--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -246,7 +246,9 @@ $background_color_2: inherit;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 25px 0;
+    padding: 15px 0;
+    margin-top: 100px;
+
     img {
       margin: 0 auto;
   }
